# chloe-and-margaret

./: Cargo.toml  README.md
chloe/: Cargo.toml
crates/chloe/: CHANGELOG.md  Cargo.toml
crates/chloe/src/: main.rs
crates/kitty-cats/: CHANGELOG.md  Cargo.toml
crates/kitty-cats/src/: lib.rs
crates/margaret/: CHANGELOG.md  Cargo.toml
crates/margaret/src/: main.rs
kitty-cats/: Cargo.toml
margaret/: Cargo.toml
