[package]
publish = true
name = "chloe-is-a-cat"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find-all-the-kitty-cats-in-charlotte = { path = "../kitty-cats" }