[package]
publish = true
name = "margaret-is-a-cat"
version = "0.0.0"
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find-all-the-kitty-cats-in-charlotte = { path = "../kitty-cats" }
